# mcda5580-clusturing

./: .gitignore  README.md  eda.ipynb  product_clustering.ipynb  pyproject.toml
report/: Makefile  includes.tex  main.tex  references.bib
report/appendices/: appendix_a.tex
report/chapters/: 1_introduction.aux  1_introduction.tex  2_methodology.aux  2_methodology.tex  3_modeling.aux  3_modeling.tex  4_results.aux  4_results.tex  5_summary.aux  5_summary.tex
